# Bernardo-project-clean

./: .flake8  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MM_draft.txt  README.md  analyze_farm8_hfd_lfd.py  changelog.md  check_changes.bat  check_changes.sh  introduction_draft.txt  main.py  pyproject.toml
.github/: .coveragerc  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: ISSUE_TEMPLATE.md  SIR_issue_template.md  feature_request.md
.github/workflows/: build-scientific-docs.yml  sphinx.yml  update_coverage_mypy_badges.sh
DataCollectionApp/: index.html  template
DataCollectionApp/css/: font-awesome.css
DataCollectionApp/js/: ace.js
RUFAS/: current_day_conditions.py  data_collection_app_updater.py  data_validator.py  e2e_test_results_handler.py  general_constants.py  graph_generator.py  input_manager.py  output_manager.py  report_generator.py  rufas_time.py  simulation_engine.py  task_manager.py  units.py  user_constants.py  util.py  weather.py
RUFAS/EEE/: EEE_manager.py  emissions.py  energy.py  tractor.py  tractor_implement.py
RUFAS/data_structures/: animal_to_manure_connection.py  crop_soil_to_feed_storage_connection.py  events.py  feed_storage_to_animal_connection.py  manure_nutrients.py  manure_supplement_methods.py  manure_to_crop_soil_connection.py  manure_types.py  tillage_implements.py
docs/: Makefile  make.bat
docs/_src/: conf.py  index.rst
docs/scientific/: animal.aux  animal.tex  animalmoddoc.lot  animalmoddoc.out  animalmoddoc.run.xml  animalmoddoc.tex  animalmoddoc.toc  crop.aux  crop_and.aux  main.aux  (+56 more)
helpful_scripts/: readme.md
input/: farm8_task_manager_metadata_HFD.json  farm8_task_manager_metadata_LFD.json  task_manager_metadata.json
output/: .keep  Farm8_HFD_vs_LFD_analysis.xlsx
tests/: test_current_day_conditions.py  test_data_collection_app_updater.py  test_data_validator.py  test_e2e_test_results_handler.py  test_general_constants.py  test_graph_generator.py  test_input_manager.py  test_main.py  test_output_manager.py  test_report_generator.py  test_simulation_engine.py  test_task_manager.py  test_time.py  test_units.py  test_util.py  test_weather.py
(+1280 files in other folders)
