[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "RuFaS"
version = "1.0.0"
description = "Ruminant Farm Systems Model"
readme = "README.md"
license = "GPL-3.0-only"
authors = [
{"name" = "RuFaS Team", "email" = "contact@rufas.org"},
]
requires-python = ">=3.12, <3.14"
dependencies = [
    "flake8>=7.1.1",
    "matplotlib>=3.10.0",
    "mock>=5.1.0",
    "numpy==2.2.0",
    "pandas>=2.2.3",
    "pytest==7.4.4",
    "pytest-mock>=3.14.0",
    "scipy>=1.15.1",
    "pytest-lazy-fixture>=0.6.3",
    "argparse>=1.4.0",
    "typing_extensions>=4.12.2",
    "sphinx>=8.1.3",
    "sphinxawesome-theme>=5.3.2",
    "juliandate>=1.0.5",
    "freezegun>=1.5.1",
    "salib==1.5.1",
    "tqdm>=4.67.1",
    "mypy>=1.15.0",
    "black>=25.1.0",
    "coverage>=7.6.11",
    "deepdiff>=8.2.0",
    "psutil>=6.1.1",
    "numba>=0.61.0"
]

[project.urls]
Homepage = "https://rufas.org"
Repository = "https://github.com/RuminantFarmSystems/RuFaS"
Documentation = "https://ruminantfarmsystems.github.io/RuFaS/"

[tool.setuptools]
packages = ["RUFAS"]

[tool.black]
target-version = ["py312"]
line-length = 120

[tool.mypy]
python_version = "3.12" # Specify the Python version used for type checking (use the lowest target version)
ignore_missing_imports = true # Ignore errors for missing imports
strict_optional = true # Make types for None explicit, requiring optional types to be explicitly annotated
disallow_untyped_defs = true # Disallow defining functions without type annotations
check_untyped_defs = true # Check the bodies of untyped functions, applying type inference where possible
disallow_any_generics = true # Disallow the use of Any as a type unless explicitly declared
disallow_incomplete_defs = true # Require all variables to be explicitly typed
show_column_numbers = true # Show column numbers in error messages
strict = true
exclude = ['^(?!.*(?:RUFAS|tests|main\.py|setup\.py)).*$']
follow_imports = "silent"

[tool.pytest.ini_options]
testpaths = ["tests"]